2002-05-29  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-w3m-retrieve-1): Don't decode the contents when
	redirect.

2002-05-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (define-ccl-program): Remove advice when non-MULE.
	It might be specified by pccl.elc if it has been mis-compiled for
	XEmacs with MULE.

	* w3m.el (w3m-delete-frame-maybe): Don't delete the current frame
	if it is the sole frame in the screen.

2002-05-29  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-zdnet.el (shimbun-make-contents): Small clean up.

2002-05-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-geocrawler.el (customize-save-variable): Shut old
	Emacsen up when compiling.
	* shimbun/sb-makanai.el (md5): Ditto.
	* w3m-xmas.el (unicode-to-char): Shut XEmacs 21.5-b5 and earlier
	up when compiling.

2002-05-29  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/shimbun.el (shimbun-make-html-contents): Insert HTML,
	HEAD, BASE, and BODY tag.

	* shimbun/sb-zdnet.el (shimbun-get-headers): Restore Message-ID
	format.
	(shimbun-zdnet-groups): Abolishded.
	(shimbun-groups): New method.
	(shimbun-get-headers): Small clean up.

2002-05-28  Kenichi SATO <ksato@iijmio-mail.jp>

	* sb-zdnet.el (shimbun-zdnet-group-url-alist): Abolishded.
	(shimbun-zdnet-group-alist): New variable.
	(shimbun-zdnet-groups): Refer `shimbun-zdnet-group-alist'.
	(shimbun-index-url): Ditto.
	(shimbun-zdnet-content-end): Relaxed.
	(shimbun-zdnet-comp-get-headers): Removed.
	(shimbun-zdnet-gamespot-get-headers): Ditto.
	(shimbun-get-headers): Reimplemented.
	(shimbun-make-contents): Remove links and images at
	`ad.zdnet.co.jp'.

2002-05-28  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-geocrawler.el (shimbun-geocrawler-add-group): Clean up.

2002-05-28  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m-e21.el (w3m-ucs-to-char): New function.

	* w3m-xmas.el (w3m-ucs-to-char): New function for XEmacs-21.5.

2002-05-28  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>
